validator_derive/tests/compile-fail/length/wrong_type.stderr
error: Validator `length` can only be used on types `String`, `&str`, Cow<'_,str> or `Vec` but found `usize` for field `s`
 --> $DIR/wrong_type.rs:6:8
  |
6 |     s: usize,
  |        ^^^^^
